<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PhotopickerActivity">

<LinearLayout
    android:id="@+id/layout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
  <LinearLayout
      android:id="@+id/nav"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:paddingTop="10dp"
      android:paddingBottom="10dp">
      <CheckBox
          android:id="@+id/ch1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/shablon1"
          android:layout_weight="1"/>
      <CheckBox
          android:id="@+id/ch2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/shablon2"
          android:layout_weight="1"/>
      <CheckBox
          android:id="@+id/ch3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/shablon3"
          android:layout_weight="1"/>
      <Button
          android:id="@+id/ok"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/butOk"
          android:layout_marginLeft="20dp"
          android:layout_weight="2"
         />
  </LinearLayout>

    <GridView
        android:id="@+id/gridImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:verticalSpacing="35px"
        android:horizontalSpacing="35px"
        android:numColumns="auto_fit"
        android:columnWidth="90dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        android:choiceMode="multipleChoice"/>
</LinearLayout>
<ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
<LinearLayout
    android:id="@+id/layout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone"
    android:gravity="center"
    android:paddingTop="20dp">
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    </LinearLayout>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Введите Ваш e-Mail"/>
    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/butSend"/>
</LinearLayout>
</ScrollView>
</LinearLayout>